--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https: //fonts.googleapis.com/css2? family= Source+Code+Pro:wght@300 & display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -36,7 +40,7 @@
             </div>
 
             <div class="titulo">
-                <h1 class="titulo">Bem-vindo ao Lar Nossa Senhora da Glória</h1>
+                <h1 class="titulo1">Bem-vindo ao Lar Nossa Senhora da Glória</h1>
                 <h3 class="subTitulo">Casa de repouso para idosos em Alto do Boa Vista</h3>
             </div>
 
@@ -46,26 +50,31 @@
 
             <div class="slides">
 
-                <div id="voltar" class="seta seta1">
-                    <i class="fas fa-chevron-left"></i>
-                </div>
-                <div id="avancar" class="seta seta2">
-                    <i class="fas fa-chevron-right"></i>
-                </div>
+                <input class="input" type="radio" name="slide" id="slide1" checked>
+                <input class="input" type="radio" name="slide" id="slide2">
+                <input class="input" type="radio" name="slide" id="slide3">
+                <input class="input" type="radio" name="slide" id="slide4">
 
-                <div class="imagem img1">
+                <div class="slide img1">
                     <img src="img/carrosel.jpeg">
                 </div>
-                <div class="imagem img2">
+                <div class="slide">
                     <img src="img/carrosel (1).jpeg">
                 </div>
-                <div class="imagem img3">
+                <div class="slide">
                     <img src="img/carrosel (2).jpeg">
                 </div>
-                <div class="imagem img4">
+                <div class="slide">
                     <img src="img/carrosel (3).jpeg">
                 </div>
 
+            </div>
+
+            <div class="navigation">
+                <label class="bar" for="slide1"></label>
+                <label class="bar" for="slide2"></label>
+                <label class="bar" for="slide3"></label>
+                <label class="bar" for="slide4"></label>
             </div>
 
         </section>
