--- a/index.html
+++ b/index.html
@@ -80,28 +80,85 @@
         </section>
 
         <section id="bloco2">
+            <h1>Instituição de longa permanência para idosos e lar temporario</h1>
+
+            <div class="conteudoB2">
+
+                <div class="paragrafoB2">
+                    <p>
+                        Fundada em 15 de agosto de 1960, o Lar Nossa <br> 
+                        Senhora da Glória funciona em uma casa <br>
+                        espaçosa e aconchegante no Alto da Boa Vista. <br><br>
+                        Com capacidade pra atender até 60 idosos, <br> 
+                        nossa casa de repouso conta com amplo <br>
+                        espaço com jardim, duas salas de convivência e <br> 
+                        uma estrutura adequada e acessível para <br>
+                        atender suas necessidades, temos <br>
+                        profissionais de nutrição, medicina, enfermagem, fisioterapia, assistência
+                        social e <br> muitos outros. <br><br>
+                        Entre em contato para mais informações ou <br>
+                        para marcar uma visita, <br> 
+                        estamos de portas abertas!
+                    </p>
+                </div>
+
+                <div class="imagensB2">
+                    <div class="img1B2">
+                        <img src="img/carrosel.jpeg">
+                    </div>
+                    <div class="img2B2">
+                        <img src="img/imagem10.jpeg">
+                    </div>
+                    <div class="img3B2">
+                        <img src="img/imgNatal.jpeg">
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section id="bloco3">
             <h1>Nosso objetivo é cuidar de que você mais ama com muito amor e carinho.</h1>
 
-            <div class="conteudo">
-                <div class="imagem">
-                    <img src="img/enfermeria-en-casa-cuando-es-conveniente.jpg">
-                </div>
-                <div class="texto">
+            <div class="informacoes">
+
+                <div class="info1">
+                    <h1><i class="fa-solid fa-house fa-2xl" style="color: #090c2a;"></i></h1>
                     <ul>
                         <li>Hospedagem</li>
-                        <li>Acompanhamento Médico semanalmente</li>
-                        <li>Assistencia de enfermagem (24HS por dia)</li>
                         <li>Lavanderia e passagem de roupa</li>
-                        <li>Limpeza diária do ambiente total</li>
-                        <li>06 refeições diárias</li>
-                        <li>Fisioterapia</li>
-                        <li>Acompanhamento e elaboração de cardápio feito pela nutricionista</li>
-                        <li>Assistente social</li>
-                        <li>Atividade sociais, lúdicas</li>
-                        <li>Manhãs e tardes dançantes</li>
-                        <li>Eventos (festa junina, natal, ano novo, páscoa, dia dos pais, das mães e dos avós, carnaval)</li>
+                        <li>Limpeza diária no ambiente total</li>
                     </ul>
                 </div>
+
+                <div class="info2">
+                    <h1><i class="fa-solid fa-heart-pulse fa-2xl" style="color: #ff0000;"></i></h1>
+                    <ul>
+                        <li>Assistencia de enfermagem (24HS por dia)</li>
+                        <li>Acompanhamento médico semanalmente</li>
+                        <li>Fisioterapia</li>
+                        <li>Assistente social</li>
+                    </ul>
+                </div>
+
+                <div class="info3">
+                    <h1><i class="fa-solid fa-pizza-slice fa-2xl" style="color: #e7f702;"></i></h1>
+                    <ul>
+                        <li>06 refeições diárias</li>
+                        <li>Acompanhamento e elaboração de cardápio feito pela nutricionista</li>
+                    </ul>
+                </div>
+
+                <div class="info4">
+                    <h1><i class="fa-solid fa-gift fa-2xl" style="color: #07c58c;"></i></h1>
+                    <ul>
+                        <li>Atividades sociais, lúdicas</li>
+                        <li>Manhãs e tardes dançantes</li>
+                        <li>Eventos (fetsa junina, natal, ano novo, páscoa, dia dos pais, das mães e dos avós, carnaval)</li>
+                    </ul>
+                </div>
+
             </div>
 
         </section>
