--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 </ul>
 
                 <ul class="menu">
-                    <li>
-                        <a href="">Solicitar Cotação</a>
+                    <li class="home">
+                        <a href="">Home</a>
                     </li>
                     <li>
-                        <a href="">Ligar</a>
-                    </li>
-                    <li>
-                        <a href="">Ver Rotas</a>
+                        <a href="">Contato</a>
                     </li>
                     <li>
                         <a href="">Galeria</a>
+                    </li>
+                    <li>
+                        <a href="">Como chegar</a>
                     </li>
                 </ul>
             </div>
@@ -119,7 +119,7 @@
         </section>
 
         <section id="bloco3">
-            <h1>Nosso objetivo é cuidar de que você mais ama com muito amor e carinho.</h1>
+            <h1>Cuidamos de quem você mais ama com muito amor e carinho.</h1>
 
             <div class="informacoes">
 
@@ -161,6 +161,23 @@
 
             </div>
 
+        </section>
+
+        <section id="bloco4">
+            <iframe src="https://www.youtube.com/embed/_GRPNn9LQaw" frameborder="0"></iframe>
+
+            <p>
+                Nosso Objetivo é melhorar a cada dia os serviços prestados e continuar
+                a construir a nossa história com todos os que confiam em nós.
+            </p>
+
+        </section>
+
+        <section id="bloco5">
+            <h1>Como chegar</h1>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7346.70755716849!2d-43.288257942883284!3d-22.97401467547977!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd78edcd3e359%3A0x3037f7e87123cc43!2sLar%20Nossa%20Senhora%20da%20Gl%C3%B3ria!5e0!3m2!1spt-BR!2sbr!4v1693789978230!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
 
     </div>
