responsivo pag1/pag3

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             <div class="informacoes">
 
-                <div class="info1">
+                <div class="linha1 info1">
                     <h1><i class="fa-solid fa-house fa-2xl" style="color: #090c2a;"></i></h1>
                     <ul>
                         <li>Hospedagem Permanente</li>
@@ -172,7 +172,7 @@
                     </ul>
                 </div>
 
-                <div class="info2">
+                <div class="linha1 info2">
                     <h1><i class="fa-solid fa-building-user fa-2xl" style="color: #090c2a;"></i></h1>
                     <ul>
                         <li>Hospedagem Transitória</li>
@@ -183,7 +183,7 @@
                     </ul>
                 </div>
 
-                <div class="info3">
+                <div class="linha1 info3">
                     <h1><i class="fa-solid fa-heart-pulse fa-2xl" style="color: #ff0000;"></i></h1>
                     <ul>
                         <li>Assistencia de enfermagem (24HS por dia)</li>
@@ -193,28 +193,28 @@
                     </ul>
                 </div>
 
-                <div class="info4">
+                <div class="linha2 info4">
                     <h1><i class="fa-solid fa-pizza-slice fa-2xl" style="color: #e7f702;"></i></h1>
                     <ul>
                         <li>06 refeições diárias</li>
                         <li>Acompanhamento e elaboração de cardápio feito pela nutricionista</li>
                     </ul>
                 </div>
-
-                <div class="info5">
-                    <h1><i class="fa-solid fa-shirt fa-2xl" style="color: #125ace;"></i></h1>
-                    <ul>
-                        <li>Limpeza diária do ambiente total</li>
-                        <li>Lavanderia e passagem de roupa</li>
-                    </ul>
-                </div>
-
-                <div class="info6">
+               
+                <div class="linha2 info6">
                     <h1><i class="fa-solid fa-gift fa-2xl" style="color: #07c58c;"></i></h1>
                     <ul>
                         <li>Atividades sociais, lúdicas</li>
                         <li>Manhãs e tardes dançantes</li>
                         <li>Eventos (fetsa junina, natal, ano novo, páscoa, dia dos pais, das mães e dos avós, carnaval)</li>
+                    </ul>
+                </div>
+
+                <div class="linha2 info5">
+                    <h1><i class="fa-solid fa-shirt fa-2xl" style="color: #125ace;"></i></h1>
+                    <ul>
+                        <li>Limpeza diária do ambiente total</li>
+                        <li>Lavanderia e passagem de roupa</li>
                     </ul>
                 </div>
 
