--- a/index.html
+++ b/index.html
@@ -32,16 +32,6 @@
         <header>
 
                 <nav class="nav-bar">
-                    
-                    <!--
-                    <div class="logo"> 
-                        <ul class="icones">
-                            <li><i style="color: #40FF00;" class="fa-brands fa-whatsapp fa-xl"></i></li>
-                            <li><i class="fa-brands fa-square-facebook fa-xl"></i></li>
-                            <li><i style="color: #FA58F4;" class="fa-brands fa-instagram fa-xl"></i></li>
-                        </ul>
-                    </div>   
-                    -->
         
                     <div class="nav-list">
                         <ul class="navegacao">
@@ -55,13 +45,13 @@
                                 <a href="" class="nav-link">Acomodações</a>
                             </li>
                             <li class="contato nav-item">
-                                <a href="" class="nav-link">Contato</a>
+                                <a href="#footer" class="nav-link">Contato</a>
                             </li>
                             <li class="galeria nav-item">
                                 <a href="galeria.html" class="nav-link">Galeria</a>
                             </li>
                             <li class="rotas nav-item">
-                                <a href="" class="nav-link">Rotas</a>
+                                <a href="#bloco6" class="nav-link">Rotas</a>
                             </li>
                         </ul>
                     </div>
@@ -77,9 +67,9 @@
                         <li class="home nav-item"><a href="" class="nav-link">Home</a></li>
                         <li class="serviços nav-item"><a href="" class="nav-link">Serviços</a></li>
                         <li class="acomodacoes nav-item"><a href="" class="nav-link">Acomodações</a></li>
-                        <li class="contato nav-item"><a href="" class="nav-link">Contato</a></li>
+                        <li class="contato nav-item"><a href="#footer" class="nav-link">Contato</a></li>
                         <li class="galeria nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
-                        <li class="rotas nav-item"><a href="" class="nav-link">Rotas</a></li>
+                        <li class="rotas nav-item"><a href="#bloco6" class="nav-link">Rotas</a></li>
                     </ul>
                 </div>
 
@@ -108,13 +98,13 @@
                     <input class="input" type="radio" name="slide" id="slide4">
 
                     <div class="slide img1">
-                        <img src="img/carrosel.jpeg">
+                        <img src="img/imagem41.jpeg">
                     </div>
                     <div class="slide">
-                        <img src="img/carrosel (1).jpeg">
+                        <img src="img/imagm9.jpeg">
                     </div>
                     <div class="slide">
-                        <img src="img/carrosel (2).jpeg">
+                        <img src="img/imagem42.jpeg">
                     </div>
                     <div class="slide">
                         <img src="img/imagem40.png">
@@ -228,7 +218,8 @@
 
 
         <section id="bloco4">
-            <iframe src="https://www.youtube.com/embed/_GRPNn9LQaw" frameborder="0"></iframe>
+
+            <iframe src="https://www.youtube.com/embed/r6mq-yKdDNQ?si=vz9pLMZicw87RLEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
             <p>
                 Nosso objetivo é melhorar a cada dia os serviços prestados e continuar
@@ -378,7 +369,7 @@
             </div>
         </section>
 
-        <footer>
+        <footer id="footer">
 
             <div class="flex">
                 <div class="imgRodape">
