--- a/galeria.html
+++ b/galeria.html
@@ -34,7 +34,7 @@
                         <a href="" class="nav-link">Serviços</a>
                     </li>
                     <li class="acomodacoes nav-item">
-                        <a href="" class="nav-link">Acomodações</a>
+                        <a href="acomodacoes.html" class="nav-link">Acomodações</a>
                     </li>
                     <li class="contato nav-item">
                         <a href="#footer" class="nav-link">Contato</a>
@@ -58,7 +58,7 @@
             <ul>
                 <li class="home nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="serviços nav-item"><a href="" class="nav-link">Serviços</a></li>
-                <li class="acomodacoes nav-item"><a href="" class="nav-link">Acomodações</a></li>
+                <li class="acomodacoes nav-item"><a href="acomodacoes.html" class="nav-link">Acomodações</a></li>
                 <li class="contato nav-item"><a href="#footer" class="nav-link">Contato</a></li>
                 <li class="galeria nav-item"><a href="" class="nav-link">Galeria</a></li>
                 <li class="rotas nav-item"><a href="#bloco6" class="nav-link">Rotas</a></li>
