--- a/galeria.html
+++ b/galeria.html
@@ -31,7 +31,7 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="serviços nav-item">
-                        <a href="" class="nav-link">Serviços</a>
+                        <a href="index.html" class="nav-link">Faq</a>
                     </li>
                     <li class="acomodacoes nav-item">
                         <a href="acomodacoes.html" class="nav-link">Acomodações</a>
@@ -57,7 +57,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="home nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="serviços nav-item"><a href="" class="nav-link">Serviços</a></li>
+                <li class="serviços nav-item"><a href="index.html" class="nav-link">Faq</a></li>
                 <li class="acomodacoes nav-item"><a href="acomodacoes.html" class="nav-link">Acomodações</a></li>
                 <li class="contato nav-item"><a href="#footer" class="nav-link">Contato</a></li>
                 <li class="galeria nav-item"><a href="" class="nav-link">Galeria</a></li>
@@ -191,12 +191,12 @@
             
             <div  class="navRodape">
                 <ul>
-                    <li><h3>Inicio</h3></li>
-                    <li>Home</li>
-                    <li>Serviços</li>
-                    <li>Acomodações</li>
-                    <li>Galeria</li>
-                    <li>Rotas</li>
+                    <li><h3>Início</h3></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Faq</a></li>
+                    <li><a href="acomodacoes.html">Acomodações</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
+                    <li><a href="index.html">Rotas</a></li>
                 </ul>
             </div>
 
@@ -215,9 +215,15 @@
 
             <div class="contatos">
                 <ul class="icones">
-                    <li><i class="fa-brands fa-whatsapp fa-2xl"></i></li>
-                    <li><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
-                    <li><i class="fa-brands fa-instagram fa-2xl"></i></li>
+                    <a href="https://contate.me/lar-nossa-senhora-da-gloria">
+                        <li><i class="fa-brands fa-whatsapp fa-2xl"></i></li>
+                    </a>
+                    <a href="https://www.facebook.com/profile.php?id=100075992298366">
+                        <li><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
+                    </a>
+                    <a href="https://www.instagram.com/lar.nossasenhoradagloria/">
+                        <li><i class="fa-brands fa-instagram fa-2xl"></i></li>
+                    </a>
                 </ul>
 
                 <h3>E-mail</h3>
